--- a/.github/workflows/get-branch-lifetime.yml
+++ b/.github/workflows/get-branch-lifetime.yml
@@ -5,6 +5,7 @@ jobs:
   get-branch-lifetime:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v3
       - name: get first commit datetime
         run: |
           git status
