fix syntax error

--- a/.github/workflows/get-branch-lifetime.yml
+++ b/.github/workflows/get-branch-lifetime.yml
@@ -5,14 +5,14 @@ jobs:
   get-branch-lifetime:
     runs-on: ubuntu-latest
     steps:
-      - name: 'PR commits + 1'
+      - name: "PR commits + 1"
         run: echo "PR_FETCH_DEPTH=$(( ${{ github.event.pull_request.commits }} + 1 ))" >> "${GITHUB_ENV}"
 
-      - name: 'Checkout PR branch and all PR commits'
+      - name: "Checkout PR branch and all PR commits"
         uses: actions/checkout@v3
-          with:
-            ref: ${{ github.event.pull_request.head.ref }}
-            fetch-depth: ${{ env.PR_FETCH_DEPTH }}
+        with:
+          ref: ${{ github.event.pull_request.head.ref }}
+          fetch-depth: ${{ env.PR_FETCH_DEPTH }}
       - name: get first commit datetime
         run: |
           git status
