--- a/.github/workflows/get-branch-lifetime.yml
+++ b/.github/workflows/get-branch-lifetime.yml
@@ -14,7 +14,7 @@ jobs:
           fetch-depth: ${{ env.PR_FETCH_DEPTH }}
       - name: get first commit datetime
         run: |
-          echo "$env.PR_FETCH_DEPTH"
-          echo "$env.PR_FETCH_DEPTH"
+          echo "commits=${{ github.event.pull_request.commits }}"
+          echo "PR_FETCH_DEPTH=${{ env.PR_FETCH_DEPTH }}"
           git status
           git log
