--- a/.github/workflows/get-branch-lifetime.yml
+++ b/.github/workflows/get-branch-lifetime.yml
@@ -5,6 +5,8 @@ jobs:
   get-branch-lifetime:
     runs-on: ubuntu-latest
     steps:
+      - name: "Check event name"
+        run: echo "${ github.event_name }}"
       - name: "PR commits + 1"
         run: echo "PR_FETCH_DEPTH=$(( ${{ github.event.pull_request.commits }} + 1 ))" >> "${GITHUB_ENV}"
       - name: "Checkout PR branch and all PR commits"
