--- a/.github/workflows/get-branch-lifetime.yml
+++ b/.github/workflows/get-branch-lifetime.yml
@@ -7,6 +7,8 @@ jobs:
     steps:
       - name: "Check event name"
         run: echo "${{ github.event_name }}"
+      - name: "Check commits includes event"
+        run: echo "${{ github.event.push.commits }}"
       - name: "PR commits + 1"
         run: echo "PR_FETCH_DEPTH=$(( ${{ github.event.pull_request.commits }} + 1 ))" >> "${GITHUB_ENV}"
       - name: "Checkout PR branch and all PR commits"
