--- a/.github/workflows/get-branch-lifetime.yml
+++ b/.github/workflows/get-branch-lifetime.yml
@@ -7,10 +7,9 @@ jobs:
     steps:
       - name: "Check event name"
         run: echo "${{ github.event_name }}"
-      - name: "Check commits includes event"
+      - name: "Check json includes event"
         run: |
-          echo "${{ github.event.commits }}"
-          echo "${{ github.event.size }}"
+          echo "${{ toJson(github.event) }}"
       - name: "PR commits + 1"
         run: echo "PR_FETCH_DEPTH=$(( ${{ github.event.pull_request.commits }} + 1 ))" >> "${GITHUB_ENV}"
       - name: "Checkout PR branch and all PR commits"
