--- a/.github/workflows/get-branch-lifetime.yml
+++ b/.github/workflows/get-branch-lifetime.yml
@@ -1,5 +1,6 @@
 on:
   pull_request:
+    types: [opened, synchronize, edited, closed, reopened, assigned, unassigned]
 
 jobs:
   get-branch-lifetime:
