--- a/.github/workflows/get-branch-lifetime.yml
+++ b/.github/workflows/get-branch-lifetime.yml
@@ -20,11 +20,11 @@ jobs:
           fetch-depth: ${{ env.PR_FETCH_DEPTH }}
       - name: get first commit datetime
         run: |
-          echo ::set-output name=first_commit_datetime::$(git log --pretty=format:"%cI" --reverse | head -1)
+          echo "FIRST_COMMIT_DATETIME=$(git log --pretty=format:"%cI" --reverse | head -1)" >> $GITHUB_ENV
       - name: get lifetime from first commit to now
         run: |
-          echo ${{ steps.vars.outputs.first_commit_datetime }}
+          echo ${{ env.FIRST_COMMIT_DATETIME }}
           d1=$(date -d now +%s)
-          d2=$(date -d "${{ steps.vars.outputs.first_commit_datetime }}" +%s)
+          d2=$(date -d "${{ env.FIRST_COMMIT_DATETIME }}" +%s)
           lifetime=$(((d1 - d2) / 60 / 60 ))
           echo "$lifetime hours"
