--- a/.github/workflows/get-branch-lifetime.yml
+++ b/.github/workflows/get-branch-lifetime.yml
@@ -20,7 +20,8 @@ jobs:
           fetch-depth: ${{ env.PR_FETCH_DEPTH }}
       - name: get lifetime of this branch
         run: |
-          oldest_timestamp=$(git log ${{ github.event.pull_request.base.ref }}..${{ github.event.pull_request.head.ref }} --format=%H --reverse | head -1)
+          git log --format=oneline
+          oldest_timestamp=$(git log ${{ github.event.pull_request.base.ref }}..HEAD --format=%H --reverse | head -1)
           now_timestamp=$(date -d now)
           now_sec=$(date -d now +%s)
           oldest_sec=$(date -d "$oldest_timestamp" +%s)
