--- a/.github/workflows/get-branch-lifetime.yml
+++ b/.github/workflows/get-branch-lifetime.yml
@@ -17,10 +17,10 @@ jobs:
         uses: actions/checkout@v3
         with:
           ref: ${{ github.event.pull_request.head.ref }}
-          fetch-depth: ${{ env.PR_FETCH_DEPTH }}
+          fetch-depth: 0
+          # fetch-depth: ${{ env.PR_FETCH_DEPTH }}
       - name: get lifetime of this branch
         run: |
-          git merge-base --fork-point refs/remotes/origin/main
           git log --format=oneline
           oldest_timestamp=$(git log ${{ github.event.pull_request.base.ref }}..HEAD --format=%H --reverse | head -1)
           now_timestamp=$(date -d now)
