--- a/.github/workflows/get-branch-lifetime.yml
+++ b/.github/workflows/get-branch-lifetime.yml
@@ -22,7 +22,7 @@ jobs:
         run: |
           git fetch --prune --progress --no-recurse-submodules origin ${{ github.event.pull_request.base.ref }}
           git log --format=oneline
-          oldest_timestamp=$(git log origin/${{ github.event.pull_request.base.ref }}..HEAD --format=%H --reverse | head -1)
+          oldest_timestamp=$(git log origin/${{ github.event.pull_request.base.ref }}..HEAD --format=%cI --reverse | head -1)
           now_timestamp=$(date -d now)
           now_sec=$(date -d now +%s)
           oldest_sec=$(date -d "$oldest_timestamp" +%s)
