--- a/.github/workflows/get-branch-lifetime.yml
+++ b/.github/workflows/get-branch-lifetime.yml
@@ -1,6 +1,6 @@
 on:
   pull_request:
-    types: [closed, synchronized, edited]
+    types: [synchronize, edited, closed]
 
 jobs:
   get-branch-lifetime:
