comment out for toJson error

--- a/.github/workflows/get-branch-lifetime.yml
+++ b/.github/workflows/get-branch-lifetime.yml
@@ -8,10 +8,10 @@ jobs:
     steps:
       - name: "Check event name"
         run: echo "${{ github.event_name }}"
-      - name: "Check json includes event"
-        run: |
-          echo "${{ toJson(github.event.pull_request) }}"
-          echo "${{ toJson(github.event.pull_request.commits) }}"
+      # - name: "Check json includes event"
+      #   run: |
+      #     echo "${{ toJson(github.event.pull_request) }}"
+      #     echo "${{ toJson(github.event.pull_request.commits) }}"
       - name: "PR commits"
         run: echo "PR_FETCH_DEPTH=$(( ${{ github.event.pull_request.commits }} ))" >> "${GITHUB_ENV}"
       - name: "Checkout PR branch and all PR commits"
