--- a/.github/workflows/call-as-actions.yml
+++ b/.github/workflows/call-as-actions.yml
@@ -6,6 +6,7 @@ jobs:
   call-as-actions:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v3
       - name: "Check event name"
         id: branch-lifetime
         uses: gki/branch-lifetime@v0.0.1
