--- a/.github/workflows/call-as-actions.yml
+++ b/.github/workflows/call-as-actions.yml
@@ -11,4 +11,4 @@ jobs:
         id: branch-lifetime
         uses: gki/branch-lifetime@v0.0.2
       - name: "Confirm output"
-        run: echo "branch-lifetime output > ${{ steps.branch-lifetime.outputs.test_output }}"
+        run: echo "branch-lifetime output >> ${{ steps.branch-lifetime.outputs.test_output }}"
