--- a/.github/workflows/call-as-actions.yml
+++ b/.github/workflows/call-as-actions.yml
@@ -9,6 +9,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: "Check event name"
         id: branch-lifetime
-        uses: gki/branch-lifetime@v0.0.2
+        uses: ./.github/actions/local-action
+        # uses: gki/branch-lifetime@v0.0.2
       - name: "Confirm output"
         run: echo "branch-lifetime output >> ${{ steps.branch-lifetime.outputs.test_output }}"
