--- a/.github/actions/local-action/action.yml
+++ b/.github/actions/local-action/action.yml
@@ -14,14 +14,17 @@ runs:
   steps:
     - name: "Check event name"
       if: ${{ github.event_name == 'pull_request'}}
+      shell: bash
       run: echo "${{ github.event_name }}"
     - name: "Check json includes event"
       if: ${{ github.event_name == 'pull_request'}}
+      shell: bash
       run: |
         echo "${{ toJson(github.event.pull_request) }}"
         echo "${{ toJson(github.event.pull_request.commits) }}"
     - name: "PR commits"
       if: ${{ github.event_name == 'pull_request'}}
+      shell: bash
       run: echo "PR_FETCH_DEPTH=$(( ${{ github.event.pull_request.commits }} ))" >> "${GITHUB_ENV}"
     - name: "Checkout PR branch and all PR commits"
       if: ${{ github.event_name == 'pull_request'}}
@@ -31,6 +34,7 @@ runs:
         fetch-depth: ${{ env.PR_FETCH_DEPTH }}
     - name: get lifetime of this branch
       if: ${{ github.event_name == 'pull_request'}}
+      shell: bash
       run: |
         git log --format="%h %cI %s"
         oldest_timestamp=$(git log --format=%cI --reverse | head -1)
@@ -45,6 +49,7 @@ runs:
     - name: Output result
       id: branch-lifetime
       if: ${{ github.event_name == 'pull_request'}}
+      shell: bash
       # env:
       #   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       #   URL: ${{ github.event.pull_request.html_url }}
