--- a/.github/workflows/call-as-actions.yml
+++ b/.github/workflows/call-as-actions.yml
@@ -7,9 +7,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: "Check event name"
+      - name: "Call local-action"
         id: branch-lifetime
-        uses: ./.github/actions/local-action
+        uses: ../..
         # uses: gki/branch-lifetime@v0.0.2
       - name: "Confirm output"
         run: echo "branch-lifetime output >> ${{ steps.branch-lifetime.outputs.test_output }}"
