--- a/action.yml
+++ b/action.yml
@@ -16,12 +16,12 @@ runs:
       if: ${{ github.event_name == 'pull_request'}}
       shell: bash
       run: echo "${{ github.event_name }}"
-    - name: "Check json includes event"
-      if: ${{ github.event_name == 'pull_request'}}
-      shell: bash
-      run: |
-        echo "${{ toJson(github.event.pull_request) }}"
-        echo "${{ toJson(github.event.pull_request.commits) }}"
+    # - name: "Check json includes event"
+    #   if: ${{ github.event_name == 'pull_request'}}
+    #   shell: bash
+    #   run: |
+    #     echo "${{ toJson(github.event.pull_request) }}"
+    #     echo "${{ toJson(github.event.pull_request.commits) }}"
     - name: "PR commits"
       if: ${{ github.event_name == 'pull_request'}}
       shell: bash
