--- a/action.yml
+++ b/action.yml
@@ -38,6 +38,7 @@ runs:
       run: |
         echo "start calc"
         git log --format="%h %cI %s"
+        echo "---1---"
         oldest_timestamp=$(git log --format=%cI --reverse | head -1)
         now_timestamp=$(date -d now --iso-8601="seconds")
         now_sec=$(date -d now +%s)
