--- a/action.yml
+++ b/action.yml
@@ -32,19 +32,18 @@ runs:
       with:
         ref: ${{ github.event.pull_request.head.ref }}
         fetch-depth: ${{ env.PR_FETCH_DEPTH }}
+    - name: "[Debug] git log"
+      run: |
+        git log --format="%h %cI %s"
     - name: get lifetime of this branch
       if: ${{ github.event_name == 'pull_request'}}
       shell: bash
       run: |
-        echo "start calc"
-        git log --format="%h %cI %s"
-        echo "---1---"
         oldest_timestamp=$(git log --format=%cI --reverse | head -1)
         now_timestamp=$(date -d now --iso-8601="seconds")
         now_sec=$(date -d now +%s)
         oldest_sec=$(date -d "$oldest_timestamp" +%s)
         lifetime=$(((now_sec - oldest_sec) / 60 / 60 ))
-        echo "---6---"
         echo "now:      $now_timestamp"
         echo "branched: $oldest_timestamp"
         echo "$lifetime hours"
