--- a/action.yml
+++ b/action.yml
@@ -41,14 +41,14 @@ runs:
       if: ${{ github.event_name == 'pull_request'}}
       shell: bash
       run: |
-        echo "0-1"
-        git log --format=%cI --reverse
-        echo "0-2"
-        git log --format=%cI --reverse | head -1
-        echo "1"
-        oldest_timestamp=`git log --format=%cI --reverse | head -1`
-        echo "2"
-        now_timestamp=$(date -d now --iso-8601="seconds")
+        echo "0-1";
+        git log --format=%cI --reverse;
+        echo "0-2";
+        git log --format=%cI --reverse | head -1;
+        echo "1";
+        oldest_timestamp=`git log --format=%cI --reverse | head -1`;
+        echo "2";
+        now_timestamp=$(date -d now --iso-8601="seconds");
         echo "3"
         now_sec=$(date -d now +%s)
         echo "4"
