--- a/action.yml
+++ b/action.yml
@@ -46,7 +46,7 @@ runs:
         echo "0-2";
         git log --format=%cI --reverse | head -1;
         echo "0-3";
-        test=`git log --format=%cI --reverse | head -1`
+        test=$(git log --format=%cI --reverse | head -1)`
         echo "0-4";
         echo $test
         echo "1";
