--- a/.github/workflows/call-as-actions.yml
+++ b/.github/workflows/call-as-actions.yml
@@ -14,4 +14,4 @@ jobs:
       - name: "Confirm output"
         run: |
           echo "${{ toJson(steps.branch-lifetime.outputs) }}"
-          echo "branch-lifetime output >> ${{ steps.branch-lifetime.outputs.test_output }}"
+          echo "branch-lifetime output >> ${{ steps.branch-lifetime.outputs.test-output }}"
