--- a/action.yml
+++ b/action.yml
@@ -23,16 +23,12 @@ runs:
       if: ${{ github.event_name == 'pull_request'}}
       shell: bash
       run: echo "${{ github.event_name }}"
-    - name: "PR commits"
-      if: ${{ github.event_name == 'pull_request'}}
-      shell: bash
-      run: echo "PR_FETCH_DEPTH=$(( ${{ github.event.pull_request.commits }} ))" >> "${GITHUB_ENV}"
     - name: "Checkout PR branch and all PR commits"
       if: ${{ github.event_name == 'pull_request'}}
       uses: actions/checkout@v3
       with:
         ref: ${{ github.event.pull_request.head.ref }}
-        fetch-depth: ${{ env.PR_FETCH_DEPTH }}
+        fetch-depth: ${{ github.event.pull_request.commits }}
     - name: "Git log"
       if: ${{ github.event_name == 'pull_request'}}
       shell: bash
