remove edited event to avoid too much run

--- a/.github/workflows/call-as-actions.yml
+++ b/.github/workflows/call-as-actions.yml
@@ -1,6 +1,6 @@
 on:
   pull_request:
-    types: [opened, synchronize, edited, closed]
+    types: [opened, synchronize, closed]
 
 jobs:
   call-as-actions:
