--- a/action.yml
+++ b/action.yml
@@ -23,8 +23,8 @@ runs:
       shell: bash
       run: |
         if [[ ${{ github.event_name }} == 'pull_request' ]]; then
-          echo "WARNING: Skip calculation since this action is for pull_request event."
-          echo "WARNING: Current event name: ${{ github.event_name }}"
+          echo "::warning WARNING: Skip calculation since this action is for pull_request event."
+          echo "::warning WARNING: Current event name: ${{ github.event_name }}"
         fi
     - name: "Checkout PR branch and all PR commits"
       if: ${{ github.event_name == 'pull_request'}}
